--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,6 @@
 <% include head.html %>
+
 Welcome to <%= title %>
+<!-- test proxy -->
+<!-- <script src="/Flat-UI/dist/js/vendor/jquery.min.js"></script> -->
 <% include foot.html %>
