--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,9 @@
 <% include head.html %>
 
-Welcome to <%= title %>
-<!-- test proxy -->
-<!-- <script src="/Flat-UI/dist/js/vendor/jquery.min.js"></script> -->
+<div class="line-box">
+    
+</div>
+<script src="http://cdn.staticfile.org/jquery/2.1.1-rc2/jquery.min.js"></script>
+<script src="/vendor/echarts-all.js"></script>
+<script src="/javascripts/index.js"></script>
 <% include foot.html %>
