--- a/views/head.html
+++ b/views/head.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="/vendor/semantic/css/semantic.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
