--- a/views/head.html
+++ b/views/head.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>行业热度－寻找热门行业！</title>
     <link rel="stylesheet" href="/vendor/semantic/css/semantic.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
