--- a/views/index.html
+++ b/views/index.html
@@ -13,26 +13,28 @@
     </div>
 
     <div class="ui segment">
-        <div class="ui selection dropdown">
+        <div class="ui select year selection dropdown">
             <input type="hidden" name="gender">
             <div class="default text">选择年份</div>
             <i class="dropdown icon"></i>
             <div class="menu">
                 <div class="item" data-value="2014">2014</div>
-                    <div class="item" data-value="2013">2013</div>
+                <div class="item" data-value="2013">2013</div>
             </div>
         </div>
 
         <div>
             <h2 class="ui header dividing">
-                专利数排名</h2>
+                <span class="show year">2014</span>年专利数排名</h2>
             <div class="num rank box">
 
             </div>
         </div>
 
         <div>
-            <h2 class="ui header dividing">专利增长速度</h2>
+            <h2 class="ui header dividing">
+                <span class="show year">2014</span>年专利增长速度
+            </h2>
             <div class="speed rank box">
 
             </div>
