--- a/views/index.html
+++ b/views/index.html
@@ -23,23 +23,30 @@
             </div>
         </div>
 
-        <div>
-            <h2 class="ui header dividing">
-                <span class="show year">2014</span>年专利数排名</h2>
-            <div class="num rank box">
+
+        <div class="ui tabular statistics type menu">
+            <a class="item active" data-tab="unread">
+                <span class="show year">2014</span>年专利数排名</a>
+            <a class="item" data-tab="saved">
+                <span class="show year">2014</span>年专利增长速度排名</a>
+            <a class="item" data-tab="all">
+                <span class="show year">2014</span>牛逼指数</a>
+        </div>
+        <div class="ui divided inbox selection list tab active" data-tab="unread">
+            <div class="num rank box" data-url="/patent/num-rank" data-val-key="num">
+            </div>
+        </div>
+        <div class="ui divided inbox selection list tab" data-tab="saved">
+            <div class="speed rank box" data-url="/patent/speed-rank" data-val-key="speed">
 
             </div>
         </div>
-
+        <div class="ui divided inbox selection list tab" data-tab="a">ass</div>
         <div>
             <h2 class="ui header dividing">
-                <span class="show year">2014</span>年专利增长速度
             </h2>
-            <div class="speed rank box">
 
-            </div>
         </div>
-
     </div>
 
     <% include foot.html %>
