--- a/views/index.html
+++ b/views/index.html
@@ -25,27 +25,25 @@
 
 
         <div class="ui tabular statistics type menu">
-            <a class="item active" data-tab="unread">
+            <a class="item active" data-tab="num-rank">
                 <span class="show year">2014</span>年专利数排名</a>
-            <a class="item" data-tab="saved">
+            <a class="item" data-tab="speed-rank">
                 <span class="show year">2014</span>年专利增长速度排名</a>
-            <a class="item" data-tab="all">
-                <span class="show year">2014</span>牛逼指数</a>
+            <a class="item" data-tab="comprehensive-rank">
+                <span class="show year">2014</span>综合实力排名</a>
         </div>
-        <div class="ui divided inbox selection list tab active" data-tab="unread">
+        <div class="ui divided inbox selection list tab active" data-tab="num-rank">
             <div class="num rank box" data-url="/patent/num-rank" data-val-key="num">
             </div>
         </div>
-        <div class="ui divided inbox selection list tab" data-tab="saved">
+        <div class="ui divided inbox selection list tab" data-tab="speed-rank">
             <div class="speed rank box" data-url="/patent/speed-rank" data-val-key="speed">
 
             </div>
         </div>
-        <div class="ui divided inbox selection list tab" data-tab="a">ass</div>
-        <div>
-            <h2 class="ui header dividing">
-            </h2>
-
+        <div class="ui divided inbox selection list tab" data-tab="comprehensive-rank">
+            <div class="num rank box" data-url="/patent/comprehensive-rank" data-val-key="num">
+            </div>
         </div>
     </div>
 
