--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
             <a class="item" data-tab="speed-rank">
                 <span class="show year">2014</span>年专利增长速度排名</a>
             <a class="item" data-tab="comprehensive-rank">
-                <span class="show year">2014</span>综合实力排名</a>
+                <span class="show year">2014</span>综合排名</a>
         </div>
         <div class="ui divided inbox selection list tab active" data-tab="num-rank">
             <div class="num rank box" data-url="/patent/num-rank" data-val-key="num">
