--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,15 @@
         </div>
     </div>
     <div class="ui" style="margin-top:100px;">
-        <div class="two column ui grid">
+        <div class="three column ui grid">
             <div class="column" style="text-align: center;">
                 <a href="/richman" class="ui primary huge button">我是投资人</a>
             </div>
             <div class="column" style="text-align: center;">
                 <div class="ui disabled huge button">我是学生</div>
+            </div>
+            <div class="column" style="text-align: center;">
+                <div class="ui disabled huge button">我要定制内容</div>
             </div>
         </div>
     </div>
